<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="16">
    <RelativeLayout
        style="@style/TitleStyle">
        <include
            android:id="@+id/withraw_title"
            layout="@layout/e_title" />
        <ImageView
            android:id="@+id/withdraw_open_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:scaleType="center"
            android:src="@mipmap/open_web"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/body_wigth"
        android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/write"
            android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/withdraw_icon"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/withdraw_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:textColor="@color/orange"
            android:layout_marginTop="8dp"
            android:text="200.00元" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_available"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:textColor="@color/item_textview_gray"/>
            <TextView
                style="@style/halving_line_e"
                android:layout_height="10dp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="8dp"
                android:src="@mipmap/alipay" />


            <TextView
                android:id="@+id/bind_alipay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/binding"
                android:textColor="@color/text_hei"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/changeBinded_alipayAccount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:text="@string/change_binded"
                android:textColor="#0080ff"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/boption_alipay_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:background="@mipmap/option" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="8dp"
                android:scaleType="center"
                android:src="@mipmap/wechat" />


            <TextView
                android:id="@+id/bind_weixin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/binding_w"
                android:textColor="@color/text_hei"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/boption_weixin_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:background="@mipmap/option" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#dcdcdc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/money_withdraw"
                android:textColor="@color/text_hei"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/input_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/money_withdraw_hint"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textSize="13dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#dcdcdc" />

        <TextView
            android:id="@+id/withdraw_tv_explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/explain"
            android:textSize="10dp" />

        <Button
            android:id="@+id/withdraw_affirm"
            android:layout_width="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/withdraw_affirm"
            android:text="@string/affirm"
            android:textSize="16dp"
            android:textColor="@color/write" />
        <TextView
            android:id="@+id/withdraw_look_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/withdraw_look_record_vstr"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>