<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="16">

    <include android:id="@+id/top_title"
        style="@style/TitleStyle"
        layout="@layout/e_title" />

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/topn_rank"
            android:textSize="18dp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/topn_name"
            android:textSize="18dp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/topn_money"
            android:textSize="18dp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/topn_count"
            android:textSize="18dp"
            android:textColor="#000"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000"/>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:dividerHeight="0.5dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000"/>
    <LinearLayout

        android:orientation="horizontal"
        android:layout_weight="1.3"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:layout_height="0dp">
        <TextView
            android:layout_marginLeft="8dp"
            android:textColor="@color/text_normal"
            android:textSize="18dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="当前排名"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/topn_tv_myrank"
            android:textColor="@color/orange"
            android:textSize="18dp"
            android:gravity="center_vertical"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <ImageView
            android:layout_marginLeft="3dp"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/topn_rank_down"
            android:id="@+id/topn_iv_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp" />
        <TextView
            android:layout_marginLeft="8dp"
            android:textColor="@color/text_normal"
            android:textSize="18dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="赚取金额"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/topn_tv_money"
            android:textColor="@color/orange"
            android:textSize="18dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>